; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_pager.c_vm_pager_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_vm_pager.c_vm_pager_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pagerops = type { i32 (...)* }

@pagertab = common dso_local global %struct.pagerops** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vm_pager_init() #0 {
  %1 = alloca %struct.pagerops**, align 8
  %2 = load %struct.pagerops**, %struct.pagerops*** @pagertab, align 8
  store %struct.pagerops** %2, %struct.pagerops*** %1, align 8
  br label %3

3:                                                ; preds = %23, %0
  %4 = load %struct.pagerops**, %struct.pagerops*** %1, align 8
  %5 = load %struct.pagerops**, %struct.pagerops*** @pagertab, align 8
  %6 = load %struct.pagerops**, %struct.pagerops*** @pagertab, align 8
  %7 = call i64 @nitems(%struct.pagerops** %6)
  %8 = getelementptr inbounds %struct.pagerops*, %struct.pagerops** %5, i64 %7
  %9 = icmp ult %struct.pagerops** %4, %8
  br i1 %9, label %10, label %26

10:                                               ; preds = %3
  %11 = load %struct.pagerops**, %struct.pagerops*** %1, align 8
  %12 = load %struct.pagerops*, %struct.pagerops** %11, align 8
  %13 = getelementptr inbounds %struct.pagerops, %struct.pagerops* %12, i32 0, i32 0
  %14 = load i32 (...)*, i32 (...)** %13, align 8
  %15 = icmp ne i32 (...)* %14, null
  br i1 %15, label %16, label %22

16:                                               ; preds = %10
  %17 = load %struct.pagerops**, %struct.pagerops*** %1, align 8
  %18 = load %struct.pagerops*, %struct.pagerops** %17, align 8
  %19 = getelementptr inbounds %struct.pagerops, %struct.pagerops* %18, i32 0, i32 0
  %20 = load i32 (...)*, i32 (...)** %19, align 8
  %21 = call i32 (...) %20()
  br label %22

22:                                               ; preds = %16, %10
  br label %23

23:                                               ; preds = %22
  %24 = load %struct.pagerops**, %struct.pagerops*** %1, align 8
  %25 = getelementptr inbounds %struct.pagerops*, %struct.pagerops** %24, i32 1
  store %struct.pagerops** %25, %struct.pagerops*** %1, align 8
  br label %3

26:                                               ; preds = %3
  ret void
}

declare dso_local i64 @nitems(%struct.pagerops**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
